Fix menu z-index

--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -6,6 +6,7 @@
   right: 0;
   background: white;
   box-sizing: border-box;
+  z-index: 1;
 
   .logo {
     background: url('../../assets/menubackground.png');
